package es.uniovi.dlp.ast.statement;

import es.uniovi.dlp.ast.AbstractASTNode;

public interface Statement {
}
